--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,24 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "medifolder"
 version = "0.1.0"
-description = "Boilerplate para projetos Python usando layout src/"
+description = "Sistema de classificação de documentos médicos usando LLM"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
   { name = "Seu Nome", email = "seu-email@example.com" },
 ]
-keywords = ["boilerplate", "python", "src layout"]
+keywords = ["medifolder", "llm", "document-classification", "medical"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
-dependencies = []
+dependencies = [
+  "openai>=1.35.0",
+  "pathlib-abc>=0.1.0",
+]
 
 [project.optional-dependencies]
 dev = [
@@ -28,6 +31,13 @@ dev = [
   "ruff>=0.3.0",
   "mypy>=1.5.0",
   "build>=1.0.0",
+]
+pdf = [
+  "PyPDF2>=3.0.0",
+]
+ocr = [
+  "pillow>=10.0.0",
+  "pytesseract>=0.3.10",
 ]
 
 [project.urls]
