Adicionar suporte a OCR e melhorar extração de texto
Implementar extração de texto de PDFs escaneados usando OCR com
PyMuPDF e Tesseract. Adicionar logs detalhados para facilitar
o debug e a validação do conteúdo extraído. Atualizar
documentação e requisitos para refletir as novas dependências
necessárias para o processamento de OCR.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ dev = [
 pdf = [
   "PyPDF2>=3.0.0",
 ]
+pdf-ocr = [
+  "PyPDF2>=3.0.0",
+  "PyMuPDF>=1.23.0",
+  "pillow>=10.0.0",
+  "pytesseract>=0.3.10",
+]
 ocr = [
   "pillow>=10.0.0",
   "pytesseract>=0.3.10",
