feat: Implement CliniKondo document processing pipeline with LLM integration
- Added configuration management in `config.py` for handling input/output directories, LLM settings, and logging.
- Developed LLM extraction logic in `llm.py` using OpenAI API for structured metadata extraction from medical documents.
- Defined core data models in `models.py` for handling document and patient information.
- Created a patient registry system in `patients.py` to manage known patients and facilitate name matching.
- Implemented document processing orchestration in `processing.py`, including text extraction from various formats and error handling.
- Established a document type catalog in `types.py` to classify documents based on keywords and synonyms.
- Introduced utility functions in `utils.py` for text normalization, slug generation, and date extraction.
- Updated tests to reflect changes in the processing pipeline and ensure functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ share/python-wheels/
 
 # Virtual environments
 .env
-.venv
+.venv/
 env/
 venv/
 ENV/
@@ -54,6 +54,9 @@ poetry.lock
 # Pytest cache
 .pytest_cache/
 
+# Sistema e cache desnecessários
+.DS_Store
+
 # Coverage reports
 .coverage
 *.cover
@@ -63,5 +66,9 @@ htmlcov/
 # Ruff cache
 .ruff_cache/
 
-# Medifolder runtime output
+# CliniKondo runtime output e estado
 output/
+.clinikondo/
+*.log
+temp/
+tmp/
