Atualizar referências de Medifolder para CliniKondo
Alterar o nome do projeto nas documentações e scripts
para refletir a mudança de Medifolder para CliniKondo.
Isso garante consistência e clareza na identificação do projeto.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-# Medifolder - Development Requirements
+# CliniKondo - Development Requirements
 # Dependências para desenvolvimento e testes
 
 # Inclui todas as dependências de produção
